Added T3 mediumn only

--- a/webproject.yml
+++ b/webproject.yml
@@ -35,7 +35,7 @@ Parameters:
     InstanceType:
         Description: "The EC2 instance type of general purpose"
         Type: String
-        AllowedValues: [t2.medium,t3.medium]
+        AllowedValues: [t3.medium]
 
     AMI:
       Description: AMI to use for our base image
